fix. typo analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
-  gtag('config', '{{ site.plainwhite.analytics_id }}');
+  gtag('config', '{{ site.analytics.tracking_id }}');
 </script>
 {%- endif -%}
 
