feat. modify css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 {% endif %}
 
 <header>
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <a href="{{ "/" | relative_url }}" class="title">{{ site.title | escape }}</a>
   {% include menu.html menu=pages text=true %}
 </header>
