--- a/assets/css/classes.sass
+++ b/assets/css/classes.sass
@@ -39,10 +39,12 @@ a:hover .icon
   border: 1.5px solid $link-color
   padding: .4em .8em
   transition: .2s background, .2s color
+  background: $link-color
+  color: #fff
 
 .more a:hover
-  color: #fff
-  background: $link-color
+  color: $link-color
+  background: #fff
   text-decoration: inherit
 
 {% endif %}
