--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -1,8 +1,8 @@
-$font-size: calc(0.8rem + 0.3vw) !default
+$font-size: 15px !default
 $font-weight: 400 !default
 $heading-weight: 600 !default
 $line-height: 1.6 !default
-$link-color: #68f !default
+$link-color: #9e9e9e !default
 $dark: #212228 !default
 $light: #ffffff !default
 
