--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
   <meta name="author" content="{{ page.author | default: site.author | escape }}">
   <meta name="generator" content="Jekyll v{{ jekyll.version }}">
   <meta name="google-site-verification" content="vZljlOYk-T9GJXGKhspo6wMfb3fNpOsoVQXbofHy--8" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2333333335898405"
+          crossorigin="anonymous"></script>
 </head>
 <link rel="canonical" href="{{ page.url | absolute_url }}">
 {% if site.show_frame %}
