--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,3 +9,5 @@
     </div>
   </div>
 </footer>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2333333335898405"
+        crossorigin="anonymous"></script>
