feat. 광고 위치 변경

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,17 @@ layout: default
       <div class="entry-content">
         {{ content }}
       </div>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2333333335898405"
+              crossorigin="anonymous"></script>
+      <ins class="adsbygoogle"
+           style="display:block; text-align:center;"
+           data-ad-layout="in-article"
+           data-ad-format="fluid"
+           data-ad-client="ca-pub-2333333335898405"
+           data-ad-slot="1704440359"></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
       {% if site.disqus.shortname %}
         {% include disqus_comments.html %}
       {% endif %}
