--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,9 @@ layout: default
       <div class="entry-content">
         {{ content }}
       </div>
+      <div class="toc">
+        {% include toc.html html=content class="toc" %}
+      </div>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2333333335898405"
               crossorigin="anonymous"></script>
       <ins class="adsbygoogle"
