--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,12 +12,13 @@ layout: default
       </div>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2333333335898405"
               crossorigin="anonymous"></script>
+      <!-- 수평광고 -->
       <ins class="adsbygoogle"
-           style="display:block; text-align:center;"
-           data-ad-layout="in-article"
-           data-ad-format="fluid"
+           style="display:block"
            data-ad-client="ca-pub-2333333335898405"
-           data-ad-slot="1704440359"></ins>
+           data-ad-slot="1137819361"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
       <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
