--- a/_sass/basically-basic/_print.scss
+++ b/_sass/basically-basic/_print.scss
@@ -244,8 +244,7 @@
   .sidebar,
   .title-area,
   .pager,
-  .site-footer,
-  .adsbygoogle {
+  .site-footer {
     display: none !important;
     height: 1px;
   }
