--- a/_sass/basically-basic/_print.scss
+++ b/_sass/basically-basic/_print.scss
@@ -244,7 +244,8 @@
   .sidebar,
   .title-area,
   .pager,
-  .site-footer {
+  .site-footer,
+  .adsbygoogle {
     display: none !important;
     height: 1px;
   }
