--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,11 +7,12 @@ layout: default
 <main id="main" class="page-content" aria-label="Content">
   <div class="inner">
     <article class="entry-wrap">
+      <div class="toc-div">
+        <div class="toc-header">Table of Contents</div>
+        {% include toc.html html=content class="toc" %}
+      </div>
       <div class="entry-content">
         {{ content }}
-      </div>
-      <div class="toc">
-        {% include toc.html html=content class="toc" %}
       </div>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2333333335898405"
               crossorigin="anonymous"></script>
