--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,15 @@ layout: default
       <div class="toc-div">
         <div class="toc-header">Table of Contents</div>
         {% include toc.html html=content class="toc" %}
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-2333333335898405"
+             data-ad-slot="6026828749"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       </div>
       <div class="entry-content">
         {{ content }}
