--- a/_sass/basically-basic/_base.scss
+++ b/_sass/basically-basic/_base.scss
@@ -114,8 +114,7 @@ a {
   float: right !important; /* added to make toc scroll with page */
   top: 0;
   right: 0;
-  height: 100%;
-  margin-right: -1 * $min-vw;
+  margin-right: -500px;
   padding-left: 1em;
   padding-top: 1em !important; /* added to make toc scroll with page */
   z-index: 10;
