--- a/_sass/basically-basic/_variables.scss
+++ b/_sass/basically-basic/_variables.scss
@@ -51,7 +51,7 @@ $monospace-font-family: Noto Sans KR, Menlo, Consolas, Monaco, "Courier New", Co
 /* Colors */
 $base-color: #393e46 !default;
 $text-color: #232323 !default;
-$accent-color: #e8b5a5 !default;
+$accent-color: #d38e79 !default;
 $background-color: #fff !default;
 $code-background-color: tint($base-color, 95%) !default;
 $border-color: tint($base-color, 80%) !default;
